2nd Attempt to fix home background not covering full screen on mobile

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -24,7 +24,7 @@ $background-opacity: 0.8;
         height: 100%;
         z-index: -1;
         background: rgba($primary-color, $background-opacity);
-        background-size: cover;
+        background-size: 200%;
       }
     }
   }
